--- a/templates/html/350form.html
+++ b/templates/html/350form.html
@@ -19,45 +19,48 @@ y unos bloques para las funciones especificas de ambos programas -->
     <div class="row">
       <div class="column">
         <div>N AV<br>
-        <input type = "number" name = "nAV"></br></div>
+        <input type = "number" name = "nAV" value="{{nAVForm}}"></br></div>
 
         <div>APT
         <select name = "section" id="SectionID" onchange="sectionFunction()">
         {% if myUser.typeUser.name == "ME" %}
           {% for section in sectionList %}
-            {% if section in myUser.seccion.all %}
+            {% if section.name == sectionForm %}
               <option value = {{ section.name }} selected> {{ section.name }}</option>
-            {% else %}
+            {% else %}                  
               <option value = {{ section.name }}> {{ section.name }}</option>
             {% endif %}
           {% endfor %}
         {% else %}
           {% for section in myUser.seccion.all %}
             {% if section.name != "380" %}
-              <option value = {{ section.name }}> {{ section.name }}</option>
+              {% if section.name == sectionForm %}
+                <option value = {{ section.name }} selected> {{ section.name }}</option>
+              {% else %}                  
+                <option value = {{ section.name }}> {{ section.name }}</option>
+              {% endif %}
             {% endif %} 
           {% endfor %}
         {% endif %}
-        </select> </div><br>
+        </select><br> </div>
         
 
         <div id="piezaIDDiv">Pieza:
         <select name = "Pieza" id="piezaID" onchange="piezaFunction()" select>
           <option value = "default">Por Defecto</option>
           {% for pieza in piezaList %}
-          <option value = {{ pieza.name }}> {{ pieza.name }}</option>
+            {% if pieza.name == piezaForm %}
+              <option value = {{ pieza.name }} selected> {{ pieza.name }}</option>
+            {% else %}                     
+              <option value = {{ pieza.name }}> {{ pieza.name }}</option>         
+            {% endif %}
           {% endfor %}
         </select> </div><br>
 
         <div>Componente:
         <select name = "Component" id="ComponentID" onchange="ComponentFunction()" select   >
           <option value = "default">Por Defecto</option>
-          {% for component in componentList %}
-          {% if component not in APT5CompList %}
-            <option value = {{ component.name }}> {{ component.name }}</option>
-          {% endif %}                          
-          {% endfor %}
-        </select> </div><br>
+        </select> </div><br> 
         
         <div>P/N
           <select name = "parNumber" id="PNID"><br>
@@ -68,31 +71,41 @@ y unos bloques para las funciones especificas de ambos programas -->
        
         <div>Area Causante
         <select name = "Area" id="AreaID">
-          <!-- Esta opcion desaparecerĂĄ al seleccionar APT -->
           {% for area in areaUserSection %}
-          <option value = {{area.name}}>{{area.name}}</option>
+            {% if area.name == areaForm %}
+              <option selected value = {{area.name}}>{{area.name}}</option>
+            {% else %}                              
+              <option value = {{area.name}}>{{area.name}}</option>
+            {% endif %}      
           {% endfor %}
         </select></div><br>
         
         <div>Desviacion
         <select name = "Defect" id="desvID">
-          <!-- Esta opcion desaparecerĂĄ al seleccionar APT -->
           {% for desv in desvUser %}
-          <option value = {{desv.name}}>{{desv.name}}</option>
+            {% if desv.name == desvForm %}
+              <option selected value = {{desv.name}}>{{desv.name}}</option>
+            {% else %}                                       
+              <option selected value = {{desv.name}}>{{desv.name}}</option>
+            {% endif %}                                       
           {% endfor %}
         </select> </div><br>
 
     {% if mode == "Accidentales" %}
     
         <div>H.N.C<br>
-        <input type = "text" name = "hnc"><br></div>
+        <input type = "text" name = "hnc" value="{{hncForm}}"><br></div>
      
     
         <div> Nivel 1 Reason Tree
           <select name = "rt1" id = "rt1" onchange="rt2Function()">
             <option value="default">Por defecto</option>
             {% for rt in rt1 %}
-            <option value="{{rt.codigo}}">{{rt.codigo}} - {{rt.nombre}}</option>
+              {% if rt.codigo == rt1Form %}
+                <option value="{{rt.codigo}}" selected>{{rt.codigo}} - {{rt.nombre}}</option>
+              {% else %}
+                <option value="{{rt.codigo}}">{{rt.codigo}} - {{rt.nombre}}</option>
+              {% endif %}                               
             {% endfor %}                           
           </select>
         </div>
@@ -105,41 +118,48 @@ y unos bloques para las funciones especificas de ambos programas -->
         {% if mode == "Accidentales" %}
     
           <div>Nivel 2 Reason Tree
-          <select name = "rt2" id="rt2" onchange="rt3Function()">
-            <option value="default">Seleccione primero nivel 1</option>
-          </select>
+            <select name = "rt2" id="rt2" onchange="rt3Function()">
+              <option value="default">Seleccione primero nivel 1</option>
+            </select>
           </div>  
           
           <div>Nivel 3 Reason Tree
-          <select name = "rt3" id="rt3"">
-            <option value="default">Seleccione primero nivel 2</option>
-          </select>
+            <select name = "rt3" id="rt3"">
+              <option value="default">Seleccione primero nivel 2</option>
+            </select>
           </div>
         
         {% endif %}    
     
         <div>Fecha<br>
-        <input type = "text" name = "date" value = {{ date }} {% if mode == "Reparaciones" %}readonly{% endif %}></br></div>
+        <input type = "text" name = "date" value={{ date }} {% if mode == "Reparaciones" %}readonly{% endif %}></br></div>
                                                    
         <div>Referencia<br>
-        <input type = "number" name = "Ref"></br></div>
+        <input type = "number" name = "Ref" value="{{refForm}}"></br></div>
 
         <div>SGM Solicitantes
         <select name = "SGM" id="SGMID">
-          <!-- Esta opcion desaparecerĂĄ al seleccionar APT -->
           {% if myUser.typeUser.name == "ME"%}
             {% for sgm in sgmList %}
-              <option value = {{sgm.number}}>{{sgm.number}}</option>
+              {% if sgm.number == sgmForm %}
+                <option selected value = {{sgm.number}}>{{sgm.number}}</option>
+              {% else %}
+                <option value = {{sgm.number}}>{{sgm.number}}</option>
+              {% endif %}                                
             {% endfor %}
           {%else%}
             {% for sgm in sgmUser %}
-              <option value = {{sgm.number}}>{{sgm.number}}</option>
+              {% if sgm.number == sgmForm %}
+                <option selected value = {{sgm.number}}>{{sgm.number}}</option>
+              {% else %}
+                <option value = {{sgm.number}}>{{sgm.number}}</option>
+              {% endif %}   
             {% endfor %}
           {%endif%}
         </select></div><br>
 
         <div>Horas Por Operario (LT)<br>
-        <input type = "number" name = "numH" onchange="calcHRec()"></br></div>
+        <input type = "number" name = "numH" value="{{numHform}}" onchange="calcHRec()"></br></div>
         
         <div>Numero Operarios<br>
         <select name="nOp" onchange="calcHRec()">
@@ -161,9 +181,14 @@ y unos bloques para las funciones especificas de ambos programas -->
         value="0" readonly></br></div>
         
         <div>Descripcion<br>
-        <textarea name="textDescp" id="textDescp" rows="5" cols="30"></textarea>
+        <textarea name="textDescp" id="textDescp" rows="5" cols="30">{{descpForm}}</textarea>
         <input type="text" hidden name = "Descp" id="descp"></br></div>
-      <input id="submit" type = "submit" value = "Enviar">
+        
+        {% if mode == "Accidentales" %}
+          <input type="text" hidden name = "changeForm" id="changeForm"></br>
+          <input class="boton"  type="submit" value="Enviar Mantener Campos" onclick="notChangeForm()"> 
+        {% endif %}                                                                           
+        <input id="submit" type = "submit" value="Enviar" {% if mode == "Accidentales" %} onclick="changeForm()"{% endif %}>
       </div>
     </div>
   </form>
@@ -175,6 +200,14 @@ y unos bloques para las funciones especificas de ambos programas -->
 <!-- JAVASCRIPT -->
 
   <script>
+  
+  function notChangeForm(){
+    document.forms["myForm"]["changeForm"].value = "False"      
+  }
+  
+  function changeForm(){
+    document.forms["myForm"]["changeForm"].value = "True"      
+  }
   
   function piezaFunction(){
       sectionFunction();
@@ -199,7 +232,7 @@ y unos bloques para las funciones especificas de ambos programas -->
         {% for pn in comp.parNumber.all %}
           designaName = "{{pn.Designacion.name}}";
           if (designaName.indexOf(pieza) != -1){
-            document.getElementById("PNID").innerHTML += "<option value ={{pn.name}}>{{pn.name}}</option>";
+            document.getElementById("PNID").innerHTML += "<option {% if pn.name == pnForm %}selected{% endif %} value ={{pn.name}}>{{pn.name}}</option>";
           }
         {% endfor %}        
       }
@@ -264,9 +297,11 @@ y unos bloques para las funciones especificas de ambos programas -->
     }else{    
         document.getElementById("ComponentID").innerHTML = "<option value = 'default'>Por Defecto</option>"
         {% for component in componentList %}
-        {% if component not in APT5CompList %}
-        document.getElementById("ComponentID").innerHTML += "<option value = {{ component.name }}> {{ component.name }}</option>"
-        {% endif %}                          
+          {% if component not in APT5CompList %}
+            {% if component.shouldShow == True %}
+              document.getElementById("ComponentID").innerHTML += "<option value = {{ component.name }}> {{ component.name }}</option>"
+            {% endif %}   
+          {% endif %}                          
         {% endfor %}     
     }
                                                                               
@@ -382,7 +417,7 @@ function rt2Function(){
     {% for rt in rt2 %} 
       var rtName = "{{rt.shortName}}" 
       if (rtName.startsWith(rt1Chosen)){
-        document.getElementById("rt2").innerHTML += "<option value = '{{rt.codigo}}'> {{rt.codigo}} - {{rt.nombre}}</option>"
+        document.getElementById("rt2").innerHTML += "<option {% if rt.codigo == rt2Form %}selected{% endif %} value = '{{rt.codigo}}'> {{rt.codigo}} - {{rt.nombre}}</option>"
       }
     {% endfor%}    
          
@@ -394,14 +429,13 @@ function rt3Function(){
     {% for rt in rt3 %} 
       var rtName = "{{rt.shortName}}" 
       if (rtName.startsWith(rt2Chosen)){
-        document.getElementById("rt3").innerHTML += "<option value = '{{rt.codigo}}'> {{rt.codigo}} - {{rt.nombre}}</option>"
+        document.getElementById("rt3").innerHTML += "<option {% if rt.codigo == rt3Form %}selected{% endif %} value = '{{rt.codigo}}'> {{rt.codigo}} - {{rt.nombre}}</option>"
       }
     {% endfor%}    
          
 }      
       
 function sendmail(sectionName){
-    alert("Entra")
     body = "Nuevo F412 creado, para seccion " + sectionName
     subject = "Notificacion F412"
     
@@ -417,9 +451,7 @@ function sendmail(sectionName){
         window.location.href(mailTo)       
     }
    
-                
 }   
-
       
 window.onload = function(){  
   sectionFunction();
