--- a/templates/html/f412Edit380.html
+++ b/templates/html/f412Edit380.html
@@ -46,14 +46,7 @@
 
         <div>P/N
           <select name = "parNumber" id="PNID"><br>
-            {% getPNEvList currentF412.Designacion as pnEvList %}
-            {% for pn in pnEvList %}
-              {% if pn == currentF412.pnEv %}
-                <option value="{{pn.name}}" selected >{{pn.name}}</option>
-              {% else %}
-                <option value="{{pn.name}}" >{{pn.name}}</option>
-              {% endif %}   
-            {% endfor %}                            
+            <option value="{{currentF412.PN.name}}" selected >{{currentF412.PN.name}}</option>                        
           </select> <br>
         </div>
 
